# clean-duke3d

./: README.md
src/: CMakeLists.txt  duke3d.h  dukeunix.h  dukewin.h  funct.h  function.h  game.c  game.h  gamedef.c  gamedefs.h  global.h  names.h  player.c  player.h  premap.c  premap.h  sector.c  sector.h  soundefs.h  types.h
src/actors/include/actors/: actors.h
src/actors/src/: actors.c
src/audiolib/include/audiolib/: _multivc.h  dpmi.h  dsl.h  fx_man.h  linklist.h  ll_man.h  multivoc.h  music.h  pitch.h  sndcards.h  sounds.h
src/audiolib/src/: sounds.c
src/automap/include/automap/: am_draw.h
src/automap/src/: am_overhead.h  am_view.h
src/con/include/con/: con.h
src/con/src/compiler/: com_keyword.h  com_label.h  com_main.h  com_misc.h  com_parser.h
src/con/src/compiler/cmds/: com_cmds.h
src/con/src/vm/: vm_main.c  vm_main.h  vm_move.c
src/con/src/vm/ops/: vm_fall.c  vm_if.c  vm_ifcansee.c  vm_operate.c  vm_ops.h  (+4 more)
src/config/include/config/: config.h
src/config/src/: scriplib.h
src/console/include/console/: _functio.h  console.h  cvar_defs.h  cvars.h
src/hud/src/: hu_draw.h  hu_text.h
src/input/include/input/: control.h  joystick.h  keyboard.h  mouse.h
src/memory/include/memory/: cache.h
src/menu/include/menu/: menu.h
src/menu/src/: animlib.h
src/physics/: CMakeLists.txt
src/physics/include/physics/: physics.h
src/physics/src/: physics.c
src/renderer/include/renderer/: draw.h  renderer.h
src/renderer/src/: r_main.c
src/rts/include/rts/: rts.h
src/rts/src/: _rts.h
src/video/include/video/: display.h  mode.h  palette.h
